# Django_project

./: pyproject.toml
config/: authentication.py  settings.py  settings_1003.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_like_tweet_alter_like_user_alter_tweet_user.py
tweets/templates/: all_tweets.html
users/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
